# licoproj

./: .editorconfig  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.cache.md  README.ja.md  README.md  _config.yml  commitlint.config.js  docker-compose.yml  eslint.config.js  index.html  main.js  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  style.css  sync-test.txt  vite.config.js
.agent/: AI_RULES.md  markdown-header-template.yaml
.agent/.archive/: 2025-11-27T12-21-53+09-00_git-commit.md  2025-11-27T12-21-53+09-00_git-initialize.md
.agent/.draft/: draft_2025-11-24.md  draft_2025-11-24T17:40:37+09:00.md  draft_2025-11-25.md  draft_2025-11-25T01:59:37+09:00.md
.agent/.draft/leonidas/: draft_2025-11-26.md
.agent/.internal/: activity-log.md  legacy.md  shadow-history.md  temp-update-dot-updated-20251128-020031.json  temp-update-language-standards-20251128-010554.md
.agent/.internal/archive/: .updated  2025-12-05_code-of-conduct-analysis_original.md  README_vision_draft.md  absolute-path-prohibition_2025-11-30T19-58-07+09-00.md  behavior_guidelines_candidate_20251201T121900+09:00.md  behavior_guidelines_candidate_20251201T124237+09:00.md  commit-granularity.md  create-prompt-draft.md  idd_tbd_discussion_base.md  issue_body.md  legacy_user_profile.md
.agent/.internal/cases/: 2025-12-22T0000_system-fix-card.md  2026-01-05T0817_cross-link-audit-card.md  2026-01-21T0121_lico-identity-card.md
.agent/.internal/conversations/: 2025-11-29T18-10-08+09-00_commit-granularity-rule-addition.md  2025-11-29T21-06-34+09-00_pr-merge-and-session-lifecycle.md
.agent/.internal/explorations/: advanced-LLM-memory-management.md  ai-context-protocol-evaluation.md  ai_communication_logic_summary.md  antigravity-model-switching-reference.md  gemini-cli-ai-to-ai-safety.md  hierarchical-ai-control-system.md  lico-cognitive-safety-and-entropy-analysis.md  llm-self-correction-strategy-analysis.md  self-perception-and-memory_2025-12-01.md  self-reflection-memory-architecture.md  tbd_refactoring_dialogue_summary.md
.agent/.internal/github-backup/: issue-12-closed.json  pr-14.json  pr-15-snapshot.json
.agent/.internal/ideas/: ai_kb_restructuring_dialogue.md  ai_model_selection_guide.md  lico_evolution_plan.md  memory-priority-deep-knowledge.md  python-uv-sync-strategy.md
.agent/.internal/references/: 2025-12-04T2325_ai_memory_priority_dialogue.md  ai-memory-confabulation-analysis.md  (+7 more)
.agent/archive/: absolute-path-prohibition_2025-11-30T19-58-07+09-00.md
.agent/cards/: ai-document-format-card.md  archival-cleanup-card.md  archival-cleanup.md  ark-card.md  communal-wisdom.md  context-cards-card.md  context-cards.md  cross-link-audit-card.md  cross-link-audit.md  datetime-standardize-card.md  deep-reading-writing.md  directory-reorganize-card.md  discussion-draft-card.md  discussion-draft.md  drafts-cleanup-card.md  drafts-cleanup.md  drafts-daily-card.md  drafts-daily.md  environment-card.md  file-reorganize.md  git-operations-card.md  github-backup-card.md  housekeeping-card.md  human-manuals-card.md  human-profile-card.md  human-thoughts-card.md  idd-finalization-card.md  idd-fini-card.md  idd-impl-card.md  idd-improvement-card.md  idd-init-card.md  identifier-profile-card.md  identifier-succession-card.md  identity-card.md  legacy-write-card.md  legacy-write.md  letters-card.md  lico-identity-card.md  lint-format-card.md  localization-card.md  (+26 more)
.agent/issue-assets/: issue-13-closed.json  issue-8-closed.json  pr-15-merged.json
.agent/issues/: issue-4-github-complete-data.json  pr-9.json
.agent/multilingual/: AI_RULES_JP.md
.agent/prompt/: auto-translate.md  commit-and-push.md  implement-auto-translation.md  translate-and-cleanup.md
.agent/recovery/: README.md
.agent/rules/: .updated  README.md  agent-code-of-conduct.md  map.md  packages-coding-conventions.md  rule-global.md  rule_packages.md
.agent/scripts/: git  grep  lico-shim.py  log_conversation.py  mv  rm  shim_config.yaml  validate_rules.py
.agent/task/: auto-translate.md  multilingual.md
.agent/templates/: commit-message.txt  header-context-card.yaml  header-frontmatter.yaml  integration-report.md  issue-comment.md  template-context-card.md  template-conversation.md  template-document.md  template-draft.md  template-skill.md
.agent/workflows/: ark-resumption.md  auto-translate.md  beautify-markdown.md  commit-and-push.md  commit.md  create-prompt-draft.md  cross-link-audit-plan.md  cross-link-audit.md  deep-reading.md  deep-writing.md  development-cycle.md  emergency-backup.md  expand-rules-readme.md  git_commit.md  idd-complete-cycle.md  idd-phase1-init.md  idd-phase2-impl.md  idd-phase3-fini.md  localize-prompts.md  localize.md  logging-implementation-plan.md  maintenance-rule-audit.md  recover-from-failure.md  ritual.md  ritual_end.md  ritual_mid.md  ritual_start.md  routine-daily.md  routine-weekly.md  routine.md  share-manual-context.md  sync-memory.md  translate-and-cleanup.md  update-protected-rules.md
.devcontainer/: devcontainer.json  resident_loop.py
.gemini/: settings.json
.github/: copilot-instructions.md
.github/workflows/: deploy.yml  jekyll-gh-pages.yml
.human/archive/: conversation-insights-2025-12-08.md  funny_pictures.md  gemini-cli-ai-to-ai-safety-ja.md  issue-driven-development-plan.md
.human/manuals/: active-ai-models.md  agent-gravestone.md  ai-emotional-logic-reference.md  ai-file-handling-techniques.md  ai-memory-persistence-reference.md  diagnosing-memory-and-abilities.md
.llama/assets/: llama-parse.jq  llama-request.json  models.ini  prompt-simple.md  prompt-talk-ja.md  prompt-talk.md
.llama/tools/: init-llama.sh  start-llama.sh  status-llama.sh  stop-llama.sh  talk-llama.sh
.ollama/assets/: ollama-parse.jq  ollama-request.json
.ollama/tools/: ollama-start.sh  ollama-stop.sh  ollama-talk.sh
.opencode/: opencode.jsonc
.opencode/agents/: .conductor.md  .investigator.md  .strategist.md  general.md  plan.md
.opencode/plugins/: lico-observer.ts
docs/: index.html
docs/assets/: index-Dto-HWhw.css  index-TX12ZLl7.js
src/: main.js
(+1256 files in other folders)
