[project]
name = "licoproj"
version = "0.0.1"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
lico-lint = ["lico-lint"]
lico-devc = ["lico-devc"]
lico-log = ["lico-log"]
lico-shim = ["lico-shim"]
lico-memory = ["lico-memory"]
lico-backup = ["lico-backup"]
lico-pipeline = ["lico-pipeline"]

dev = [
  "pyright>=1.1.408",
  "pytest>=9.0.2",
  "pyyaml>=6.0.3",
  "ruff>=0.15.7",
  "shellcheck-py>=0.10.0.1",
  "shfmt-py>=3.8.0.1",
  "ty>=0.0.25",
]

[project.optional-dependencies]
lico-lint = ["lico-lint"]
lico-devc = ["lico-devc"]
lico-log = ["lico-log"]
lico-shim = ["lico-shim"]
lico-memory = ["lico-memory"]
lico-backup = ["lico-backup"]
lico-pipeline = ["lico-pipeline"]

[tool.uv]
cache-dir = "./.temp/cache/uv"
default-groups = [
  "dev",
  "lico-lint",
  "lico-devc",
  "lico-log",
  "lico-shim",
  "lico-memory",
  "lico-backup",
  "lico-pipeline",
]

[tool.uv.sources]
lico-lint = { workspace = true }
lico-devc = { workspace = true }
lico-log = { workspace = true }
lico-shim = { workspace = true }
lico-memory = { workspace = true }
lico-backup = { workspace = true }
lico-pipeline = { workspace = true }

[tool.uv.workspace]
members = [
  "packages/lico-lint",
  "packages/lico-devc",
  "packages/lico-log",
  "packages/lico-shim",
  "packages/lico-memory",
  "packages/lico-backup",
  "packages/lico-pipeline",
]

[tool.ruff]
cache-dir = "./.temp/cache/ruff"
src = [
  "packages/lico-lint/src",
  "packages/lico-lint/tests",
  "packages/lico-devc/src",
  "packages/lico-devc/tests",
  "packages/lico-log/src",
  "packages/lico-log/tests",
  "packages/lico-shim/src",
  "packages/lico-shim/tests",
  "packages/lico-memory/src",
  "packages/lico-memory/tests",
  "packages/lico-backup/src",
  "packages/lico-backup/tests",
  "packages/lico-pipeline/src",
  "packages/lico-pipeline/tests",
]
exclude = [
  "**/.temp/**",
  "**/.venv/**",
  "**/node_modules/**",
  "**/.trash/**",
  "**/.agent/.internal/archive/**",
  "**/.human/.internal/archive/**",
  "**/.repos/.licoshdw/archive/**",
]
line-length = 79
respect-gitignore = true
target-version = "py314"
preview = true

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "CPY001",
  "D203",
  "D213",
  "COM812",
  "ISC001",
  "S404",
  "S603",
  "S606",
  "S607",
  "S101",
]
preview = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.ty.environment]
extra-paths = [
  "packages/lico-lint/src",
  "packages/lico-devc/src",
  "packages/lico-log/src",
  "packages/lico-shim/src",
  "packages/lico-memory/src",
  "packages/lico-backup/src",
  "packages/lico-pipeline/src",
]
python-version = "3.14"

[tool.ty.src]
include = [
  "packages/lico-lint/src",
  "packages/lico-lint/tests",
  "packages/lico-devc/src",
  "packages/lico-devc/tests",
  "packages/lico-log/src",
  "packages/lico-log/tests",
  "packages/lico-shim/src",
  "packages/lico-shim/tests",
  "packages/lico-memory/src",
  "packages/lico-memory/tests",
  "packages/lico-backup/src",
  "packages/lico-backup/tests",
  "packages/lico-pipeline/src",
  "packages/lico-pipeline/tests",
]
exclude = [
  "**/.venv",
  "**/.temp",
  "**/.trash",
  "**/node_modules",
  "**/__pycache__",
  "**/.agent/.internal/archive",
  "**/.human/.internal/archive",
  "**/.repos/.licoshdw/archive",
]

[tool.ty.rules]
unknown-parameter-type = "error"
unknown-argument-type = "error"
unknown-variable-type = "error"
unknown-member-access = "error"
unknown-return-type = "error"
report-missing-imports = "error"
possibly-unbound-attribute = "error"
redundant-cast = "error"
unused-ignore = "error"
deprecated = "error"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.14"
pythonPlatform = "Linux"
exclude = [
  "**/.venv",
  "**/.temp",
  "**/.trash",
  "**/node_modules",
  "**/__pycache__",
  "**/.agent/.internal/archive",
  "**/.human/.internal/archive",
  "**/.repos/.licoshdw/archive",
]
include = ["."]
extraPaths = [
  "packages/lico-lint/src",
  "packages/lico-devc/src",
  "packages/lico-log/src",
  "packages/lico-shim/src",
  "packages/lico-memory/src",
  "packages/lico-backup/src",
  "packages/lico-pipeline/src",
]
reportUnknownVariableType = "error"
reportUnknownMemberType = "error"
reportUnknownParameterType = "error"
reportUnknownArgumentType = "error"
reportUnknownLambdaType = "error"
reportUnusedImport = "error"
reportUnusedVariable = "error"
reportUnusedClass = "error"
reportUnusedFunction = "error"
reportMissingTypeStubs = true
reportUntypedFunctionDecorator = true
reportPrivateUsage = "error"
reportTypeCommentUsage = "error"
reportImplicitStringConcatenation = "error"

[tool.pytest.ini_options]
addopts = """
  --capture=no
  --exitfirst
  --last-failed
  --new-first
  --verbose
"""
cache_dir = "./.temp/cache/pytest"
pythonpath = [
  "packages/lico-lint",
  "packages/lico-devc",
  "packages/lico-log",
  "packages/lico-shim",
  "packages/lico-memory",
  "packages/lico-backup",
  "packages/lico-pipeline",
]
testpaths = [
  "packages/lico-lint/tests",
  "packages/lico-devc/tests",
  "packages/lico-log/tests",
  "packages/lico-shim/tests",
  "packages/lico-memory/tests",
  "packages/lico-backup/tests",
  "packages/lico-pipeline/tests",
]
