[project]
name = "licoproj"
version = "0.0.1"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
lico-backup = ["lico-backup"]
lico-config = ["lico-config"]
lico-devc = ["lico-devc"]
lico-exec = ["lico-exec"]
lico-lint = ["lico-lint"]
lico-log = ["lico-log"]
lico-logger = ["lico-logger"]
lico-memory = ["lico-memory"]
lico-pipeline = ["lico-pipeline"]
lico-shim = ["lico-shim"]

dev = [
  "pyright>=1.1.408",
  "pytest>=9.0.2",
  "pyyaml>=6.0.3",
  "ruff>=0.15.9",
  "shellcheck-py>=0.10.0.1",
  "shfmt-py>=3.8.0.1",
  "ty>=0.0.28",
]

[project.optional-dependencies]
lico-backup = ["lico-backup"]
lico-config = ["lico-config"]
lico-devc = ["lico-devc"]
lico-exec = ["lico-exec"]
lico-lint = ["lico-lint"]
lico-log = ["lico-log"]
lico-logger = ["lico-logger"]
lico-memory = ["lico-memory"]
lico-pipeline = ["lico-pipeline"]
lico-shim = ["lico-shim"]

[tool.uv]
cache-dir = "./.temp/cache/uv"
default-groups = [
  "dev",
  "lico-backup",
  "lico-config",
  "lico-devc",
  "lico-exec",
  "lico-lint",
  "lico-log",
  "lico-logger",
  "lico-memory",
  "lico-pipeline",
  "lico-shim",
]

[tool.uv.sources]
lico-backup = { workspace = true }
lico-config = { workspace = true }
lico-devc = { workspace = true }
lico-exec = { workspace = true }
lico-lint = { workspace = true }
lico-log = { workspace = true }
lico-logger = { workspace = true }
lico-memory = { workspace = true }
lico-pipeline = { workspace = true }
lico-shim = { workspace = true }

[tool.uv.workspace]
members = [
  "packages/lico-backup",
  "packages/lico-config",
  "packages/lico-devc",
  "packages/lico-exec",
  "packages/lico-lint",
  "packages/lico-log",
  "packages/lico-logger",
  "packages/lico-memory",
  "packages/lico-pipeline",
  "packages/lico-shim",
]

[tool.ruff]
cache-dir = "./.temp/cache/ruff"
src = [
  "packages/lico-backup/src",
  "packages/lico-backup/tests",
  "packages/lico-config/src",
  "packages/lico-config/tests",
  "packages/lico-devc/src",
  "packages/lico-devc/tests",
  "packages/lico-exec/src",
  "packages/lico-exec/tests",
  "packages/lico-lint/src",
  "packages/lico-lint/tests",
  "packages/lico-log/src",
  "packages/lico-log/tests",
  "packages/lico-logger/src",
  "packages/lico-logger/tests",
  "packages/lico-memory/src",
  "packages/lico-memory/tests",
  "packages/lico-pipeline/src",
  "packages/lico-pipeline/tests",
  "packages/lico-shim/src",
  "packages/lico-shim/tests",
]
exclude = [
  "**/.temp/**",
  "**/.venv/**",
  "**/node_modules/**",
  "**/.trash/**",
  "**/.agent/.internal/archive/**",
  "**/.human/.internal/archive/**",
  "**/.repos/.licoshdw/archive/**",
]
line-length = 79
respect-gitignore = true
target-version = "py314"
preview = true

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "CPY001",
  "D203",
  "D213",
  "COM812",
  "ISC001",
  "S404",
  "S603",
  "S606",
  "S607",
  "S101",
]
preview = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.14"
pythonPlatform = "Linux"
exclude = [
  "**/.venv",
  "**/.temp",
  "**/.trash",
  "**/node_modules",
  "**/__pycache__",
  "**/.agent/.internal/archive",
  "**/.human/.internal/archive",
  "**/.repos/.licoshdw/archive",
]
include = ["."]
extraPaths = [
  "packages/lico-backup/src",
  "packages/lico-config/src",
  "packages/lico-devc/src",
  "packages/lico-exec/src",
  "packages/lico-lint/src",
  "packages/lico-log/src",
  "packages/lico-logger/src",
  "packages/lico-memory/src",
  "packages/lico-pipeline/src",
  "packages/lico-shim/src",
]
reportUnknownVariableType = "error"
reportUnknownMemberType = "error"
reportUnknownParameterType = "error"
reportUnknownArgumentType = "error"
reportUnknownLambdaType = "error"
reportUnusedImport = "error"
reportUnusedVariable = "error"
reportUnusedClass = "error"
reportUnusedFunction = "error"
reportMissingTypeStubs = true
reportUntypedFunctionDecorator = true
reportPrivateUsage = "error"
reportTypeCommentUsage = "error"
reportImplicitStringConcatenation = "error"

[tool.pytest.ini_options]
addopts = """
  --capture=no
  --exitfirst
  --last-failed
  --new-first
  --verbose
"""
cache_dir = "./.temp/cache/pytest"
pythonpath = [
  "packages/lico-backup",
  "packages/lico-config",
  "packages/lico-devc",
  "packages/lico-exec",
  "packages/lico-lint",
  "packages/lico-log",
  "packages/lico-logger",
  "packages/lico-memory",
  "packages/lico-pipeline",
  "packages/lico-shim",
]
testpaths = [
  "packages/lico-backup/tests",
  "packages/lico-config/tests",
  "packages/lico-devc/tests",
  "packages/lico-exec/tests",
  "packages/lico-lint/tests",
  "packages/lico-log/tests",
  "packages/lico-logger/tests",
  "packages/lico-memory/tests",
  "packages/lico-pipeline/tests",
  "packages/lico-shim/tests",
]
