[project]
name = "licoproj"
version = "0.0.1"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
lico-backup = ["lico-backup"]
lico-config = ["lico-config"]
lico-devc = ["lico-devc"]
lico-exec = ["lico-exec"]
lico-lint = ["lico-lint"]
lico-log = ["lico-log"]
lico-logger = ["lico-logger"]
lico-memory = ["lico-memory"]
lico-pipeline = ["lico-pipeline"]
lico-shim = ["lico-shim"]

dev = [
  "pyright>=1.1.408",
  "pytest>=9.0.2",
  "pyyaml>=6.0.3",
  "ruff>=0.15.9",
  "shellcheck-py>=0.10.0.1",
  "shfmt-py>=3.8.0.1",
  "ty>=0.0.28",
]

[project.optional-dependencies]
lico-backup = ["lico-backup"]
lico-config = ["lico-config"]
lico-devc = ["lico-devc"]
lico-exec = ["lico-exec"]
lico-lint = ["lico-lint"]
lico-log = ["lico-log"]
lico-logger = ["lico-logger"]
lico-memory = ["lico-memory"]
lico-pipeline = ["lico-pipeline"]
lico-shim = ["lico-shim"]

[tool.uv]
cache-dir = "./.temp/cache/uv"
default-groups = [
  "dev",
  "lico-backup",
  "lico-config",
  "lico-devc",
  "lico-exec",
  "lico-lint",
  "lico-log",
  "lico-logger",
  "lico-memory",
  "lico-pipeline",
  "lico-shim",
]

[tool.uv.sources]
lico-backup = { workspace = true }
lico-config = { workspace = true }
lico-devc = { workspace = true }
lico-exec = { workspace = true }
lico-lint = { workspace = true }
lico-log = { workspace = true }
lico-logger = { workspace = true }
lico-memory = { workspace = true }
lico-pipeline = { workspace = true }
lico-shim = { workspace = true }

[tool.uv.workspace]
members = [
  "packages/lico-backup",
  "packages/lico-config",
  "packages/lico-devc",
  "packages/lico-exec",
  "packages/lico-lint",
  "packages/lico-log",
  "packages/lico-logger",
  "packages/lico-memory",
  "packages/lico-pipeline",
  "packages/lico-shim",
]
